# hantaton2023

./: .env-example  README.md  pyproject.toml  requirements.txt  test.py
src/: config.py  handlers.py  index.html  keyboard.py  parse.py  run.py  schemas.py  service.py  view.py  words.txt
src/db/: db.sql  db.sqlite  sql.py
